@@ -1,3 +1,5 @@
+* Fix Chrome Date#toJSON throwing errors when its result is not a primitive. [jddalton]
+
 * Ensure decorators are created when fuse.dom.Element#observe is called with a raw element as its `this`. [jddalton, Joe Gornick]
 
 * Avoid a conflict with the document's data id by initializing IE's unqiueNumber property on a dummy element. [jddalton]
